--- a/index.html
+++ b/index.html
@@ -9,4 +9,7 @@
     <h1>home work list</h1>
 
 </body>
- <a href="hw_1/index.html">HW</a></html>
+<ul>
+    <li> <a href="index2.html">HW</a></html></li>
+</ul>
+
