--- a/hw10/index.html
+++ b/hw10/index.html
@@ -15,9 +15,18 @@
     <a href="#"><img src="logo.png" alt="logo"></a>
 </nav>
 </header>
+<aside class="conteiner3">
+    <ul>
+        <li><h4>Introduction</h4></li>
+        <li><h4>core components</h4></li>
+        <li><h4>react fundamentals</h4></li>
+        <li><h4>handling text input</h4></li>
+    </ul>
+</aside>
 <section>
-<div class="conteiner">
-<div>
+<img src="item.jpg" alt="tools" class="tools"> 
+<div class="conteiner2">
+<div class="articles">
     <div class="title">
         <h3>Introduction</h3>
         <p class="subtitle">Chapter 1</p>
@@ -30,7 +39,7 @@
         </p>
     </div>
 </div>
-<div>
+<div class="articles">
     <div class="title">
         <h3>core components</h3>
         <p class="subtitle">Chapter 2</p>
@@ -45,7 +54,7 @@
          </p>
     </div>
 </div>
-<div>
+<div class="articles">
     <div class="title">
         <h3>react fundamentals</h3>
         <p class="subtitle">Chapter 3</p>
@@ -75,7 +84,7 @@
         </p>
     </div>
 </div>
-<div>
+<div class="articles">
     <div class="title">
         <h3>handling text input</h3>
         <p class="subtitle">Chapter 4</p>
